# tap-cegid

./: README.md  cegid.ipynb  meltano.yml  pyproject.toml  settings.json
tap_cegid/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_cegid/utils/: authenticate.py
tests/: __init__.py  test_core.py
